sofa-platform/src/main/cpp/src/sofa.h

SOFAExport double iauObl80(double date1, double date2);
SOFAExport void iauP06e(double date1, double date2, double *eps0, double *psia, double *oma, double *bpa, double *bqa, double *pia, double *bpia, double *epsa, double *chia, double *za, double *zetaa, double *thetaa, double *pa, double *gam, double *phi, double *psi);
SOFAExport void iauPb06(double date1, double date2, double *bzeta, double *bz, double *btheta);
SOFAExport void iauPfw06(double date1, double date2, double *gamb, double *phib, double *psib, double *epsa);
SOFAExport void iauPmat00(double date1, double date2, double rbp[3][3]);
SOFAExport void iauPmat06(double date1, double date2, double rbp[3][3]);
SOFAExport void iauPmat76(double date1, double date2, double rmatp[3][3]);
SOFAExport void iauPn00(double date1, double date2, double dpsi, double deps, double *epsa, double rb[3][3], double rp[3][3], double rbp[3][3], double rn[3][3], double rbpn[3][3]);
SOFAExport void iauPn00a(double date1, double date2, double *dpsi, double *deps, double *epsa, double rb[3][3], double rp[3][3], double rbp[3][3], double rn[3][3], double rbpn[3][3]);
SOFAExport void iauPn00b(double date1, double date2, double *dpsi, double *deps, double *epsa, double rb[3][3], double rp[3][3], double rbp[3][3], double rn[3][3], double rbpn[3][3]);
SOFAExport void iauPn06(double date1, double date2, double dpsi, double deps, double *epsa, double rb[3][3], double rp[3][3], double rbp[3][3], double rn[3][3], double rbpn[3][3]);
SOFAExport void iauPn06a(double date1, double date2, double *dpsi, double *deps, double *epsa, double rb[3][3], double rp[3][3], double rbp[3][3], double rn[3][3], double rbpn[3][3]);
SOFAExport void iauPnm00a(double date1, double date2, double rbpn[3][3]);
SOFAExport void iauPnm00b(double date1, double date2, double rbpn[3][3]);
SOFAExport void iauPnm06a(double date1, double date2, double rnpb[3][3]);
SOFAExport void iauPnm80(double date1, double date2, double rmatpn[3][3]);
SOFAExport void iauPom00(double xp, double yp, double sp, double rpom[3][3]);
SOFAExport void iauPr00(double date1, double date2, double *dpsipr, double *depspr);
SOFAExport void iauPrec76(double ep01, double ep02, double ep11, double ep12, double *zeta, double *z, double *theta);
SOFAExport double iauS00(double date1, double date2, double x, double y);
SOFAExport double iauS00a(double date1, double date2);
SOFAExport double iauS00b(double date1, double date2);