sofa/src/main/java/be/angelcorp/sofa/SofaLibrary.java

	/**
	 * Original signature : <code>double iauObl80(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:121</i>
	 */
	native public static double iauObl80(double date1, double date2);
	/**
	 * Original signature : <code>void iauP06e(double, double, double*, double*, double*, double*, double*, double*, double*, double*, double*, double*, double*, double*, double*, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:123</i>
	 */
	public static void iauP06e(double date1, double date2, Pointer<Double > eps0, Pointer<Double > psia, Pointer<Double > oma, Pointer<Double > bpa, Pointer<Double > bqa, Pointer<Double > pia, Pointer<Double > bpia, Pointer<Double > epsa, Pointer<Double > chia, Pointer<Double > za, Pointer<Double > zetaa, Pointer<Double > thetaa, Pointer<Double > pa, Pointer<Double > gam, Pointer<Double > phi, Pointer<Double > psi) {
		iauP06e(date1, date2, Pointer.getPeer(eps0), Pointer.getPeer(psia), Pointer.getPeer(oma), Pointer.getPeer(bpa), Pointer.getPeer(bqa), Pointer.getPeer(pia), Pointer.getPeer(bpia), Pointer.getPeer(epsa), Pointer.getPeer(chia), Pointer.getPeer(za), Pointer.getPeer(zetaa), Pointer.getPeer(thetaa), Pointer.getPeer(pa), Pointer.getPeer(gam), Pointer.getPeer(phi), Pointer.getPeer(psi));
	}
	protected native static void iauP06e(double date1, double date2, @Ptr long eps0, @Ptr long psia, @Ptr long oma, @Ptr long bpa, @Ptr long bqa, @Ptr long pia, @Ptr long bpia, @Ptr long epsa, @Ptr long chia, @Ptr long za, @Ptr long zetaa, @Ptr long thetaa, @Ptr long pa, @Ptr long gam, @Ptr long phi, @Ptr long psi);
	/**
	 * Original signature : <code>void iauPb06(double, double, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:125</i>
	 */
	public static void iauPb06(double date1, double date2, Pointer<Double > bzeta, Pointer<Double > bz, Pointer<Double > btheta) {
		iauPb06(date1, date2, Pointer.getPeer(bzeta), Pointer.getPeer(bz), Pointer.getPeer(btheta));
	}
	protected native static void iauPb06(double date1, double date2, @Ptr long bzeta, @Ptr long bz, @Ptr long btheta);
	/**
	 * Original signature : <code>void iauPfw06(double, double, double*, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:127</i>
	 */
	public static void iauPfw06(double date1, double date2, Pointer<Double > gamb, Pointer<Double > phib, Pointer<Double > psib, Pointer<Double > epsa) {
		iauPfw06(date1, date2, Pointer.getPeer(gamb), Pointer.getPeer(phib), Pointer.getPeer(psib), Pointer.getPeer(epsa));
	}
	protected native static void iauPfw06(double date1, double date2, @Ptr long gamb, @Ptr long phib, @Ptr long psib, @Ptr long epsa);
	/**
	 * Original signature : <code>void iauPmat00(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:129</i>
	 */
	public static void iauPmat00(double date1, double date2, Pointer<Double > rbp) {
		iauPmat00(date1, date2, Pointer.getPeer(rbp));
	}
	protected native static void iauPmat00(double date1, double date2, @Ptr long rbp);
	/**
	 * Original signature : <code>void iauPmat06(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:131</i>
	 */
	public static void iauPmat06(double date1, double date2, Pointer<Double > rbp) {
		iauPmat06(date1, date2, Pointer.getPeer(rbp));
	}
	protected native static void iauPmat06(double date1, double date2, @Ptr long rbp);
	/**
	 * Original signature : <code>void iauPmat76(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:133</i>
	 */
	public static void iauPmat76(double date1, double date2, Pointer<Double > rmatp) {
		iauPmat76(date1, date2, Pointer.getPeer(rmatp));
	}
	protected native static void iauPmat76(double date1, double date2, @Ptr long rmatp);
	/**
	 * Original signature : <code>void iauPn00(double, double, double, double, double*, double[3][3], double[3][3], double[3][3], double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:135</i>
	 */
	public static void iauPn00(double date1, double date2, double dpsi, double deps, Pointer<Double > epsa, Pointer<Double > rb, Pointer<Double > rp, Pointer<Double > rbp, Pointer<Double > rn, Pointer<Double > rbpn) {
		iauPn00(date1, date2, dpsi, deps, Pointer.getPeer(epsa), Pointer.getPeer(rb), Pointer.getPeer(rp), Pointer.getPeer(rbp), Pointer.getPeer(rn), Pointer.getPeer(rbpn));
	}
	protected native static void iauPn00(double date1, double date2, double dpsi, double deps, @Ptr long epsa, @Ptr long rb, @Ptr long rp, @Ptr long rbp, @Ptr long rn, @Ptr long rbpn);
	/**
	 * Original signature : <code>void iauPn00a(double, double, double*, double*, double*, double[3][3], double[3][3], double[3][3], double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:137</i>
	 */
	public static void iauPn00a(double date1, double date2, Pointer<Double > dpsi, Pointer<Double > deps, Pointer<Double > epsa, Pointer<Double > rb, Pointer<Double > rp, Pointer<Double > rbp, Pointer<Double > rn, Pointer<Double > rbpn) {
		iauPn00a(date1, date2, Pointer.getPeer(dpsi), Pointer.getPeer(deps), Pointer.getPeer(epsa), Pointer.getPeer(rb), Pointer.getPeer(rp), Pointer.getPeer(rbp), Pointer.getPeer(rn), Pointer.getPeer(rbpn));
	}
	protected native static void iauPn00a(double date1, double date2, @Ptr long dpsi, @Ptr long deps, @Ptr long epsa, @Ptr long rb, @Ptr long rp, @Ptr long rbp, @Ptr long rn, @Ptr long rbpn);
	/**
	 * Original signature : <code>void iauPn00b(double, double, double*, double*, double*, double[3][3], double[3][3], double[3][3], double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:139</i>
	 */
	public static void iauPn00b(double date1, double date2, Pointer<Double > dpsi, Pointer<Double > deps, Pointer<Double > epsa, Pointer<Double > rb, Pointer<Double > rp, Pointer<Double > rbp, Pointer<Double > rn, Pointer<Double > rbpn) {
		iauPn00b(date1, date2, Pointer.getPeer(dpsi), Pointer.getPeer(deps), Pointer.getPeer(epsa), Pointer.getPeer(rb), Pointer.getPeer(rp), Pointer.getPeer(rbp), Pointer.getPeer(rn), Pointer.getPeer(rbpn));
	}
	protected native static void iauPn00b(double date1, double date2, @Ptr long dpsi, @Ptr long deps, @Ptr long epsa, @Ptr long rb, @Ptr long rp, @Ptr long rbp, @Ptr long rn, @Ptr long rbpn);
	/**
	 * Original signature : <code>void iauPn06(double, double, double, double, double*, double[3][3], double[3][3], double[3][3], double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:141</i>
	 */
	public static void iauPn06(double date1, double date2, double dpsi, double deps, Pointer<Double > epsa, Pointer<Double > rb, Pointer<Double > rp, Pointer<Double > rbp, Pointer<Double > rn, Pointer<Double > rbpn) {
		iauPn06(date1, date2, dpsi, deps, Pointer.getPeer(epsa), Pointer.getPeer(rb), Pointer.getPeer(rp), Pointer.getPeer(rbp), Pointer.getPeer(rn), Pointer.getPeer(rbpn));
	}
	protected native static void iauPn06(double date1, double date2, double dpsi, double deps, @Ptr long epsa, @Ptr long rb, @Ptr long rp, @Ptr long rbp, @Ptr long rn, @Ptr long rbpn);
	/**
	 * Original signature : <code>void iauPn06a(double, double, double*, double*, double*, double[3][3], double[3][3], double[3][3], double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:143</i>
	 */
	public static void iauPn06a(double date1, double date2, Pointer<Double > dpsi, Pointer<Double > deps, Pointer<Double > epsa, Pointer<Double > rb, Pointer<Double > rp, Pointer<Double > rbp, Pointer<Double > rn, Pointer<Double > rbpn) {
		iauPn06a(date1, date2, Pointer.getPeer(dpsi), Pointer.getPeer(deps), Pointer.getPeer(epsa), Pointer.getPeer(rb), Pointer.getPeer(rp), Pointer.getPeer(rbp), Pointer.getPeer(rn), Pointer.getPeer(rbpn));
	}
	protected native static void iauPn06a(double date1, double date2, @Ptr long dpsi, @Ptr long deps, @Ptr long epsa, @Ptr long rb, @Ptr long rp, @Ptr long rbp, @Ptr long rn, @Ptr long rbpn);
	/**
	 * Original signature : <code>void iauPnm00a(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:145</i>
	 */
	public static void iauPnm00a(double date1, double date2, Pointer<Double > rbpn) {
		iauPnm00a(date1, date2, Pointer.getPeer(rbpn));
	}
	protected native static void iauPnm00a(double date1, double date2, @Ptr long rbpn);
	/**
	 * Original signature : <code>void iauPnm00b(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:147</i>
	 */
	public static void iauPnm00b(double date1, double date2, Pointer<Double > rbpn) {
		iauPnm00b(date1, date2, Pointer.getPeer(rbpn));
	}
	protected native static void iauPnm00b(double date1, double date2, @Ptr long rbpn);
	/**
	 * Original signature : <code>void iauPnm06a(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:149</i>
	 */
	public static void iauPnm06a(double date1, double date2, Pointer<Double > rnpb) {
		iauPnm06a(date1, date2, Pointer.getPeer(rnpb));
	}
	protected native static void iauPnm06a(double date1, double date2, @Ptr long rnpb);
	/**
	 * Original signature : <code>void iauPnm80(double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:151</i>
	 */
	public static void iauPnm80(double date1, double date2, Pointer<Double > rmatpn) {
		iauPnm80(date1, date2, Pointer.getPeer(rmatpn));
	}
	protected native static void iauPnm80(double date1, double date2, @Ptr long rmatpn);
	/**
	 * Original signature : <code>void iauPom00(double, double, double, double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:153</i>
	 */
	public static void iauPom00(double xp, double yp, double sp, Pointer<Double > rpom) {
		iauPom00(xp, yp, sp, Pointer.getPeer(rpom));
	}
	protected native static void iauPom00(double xp, double yp, double sp, @Ptr long rpom);
	/**
	 * Original signature : <code>void iauPr00(double, double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:155</i>
	 */
	public static void iauPr00(double date1, double date2, Pointer<Double > dpsipr, Pointer<Double > depspr) {
		iauPr00(date1, date2, Pointer.getPeer(dpsipr), Pointer.getPeer(depspr));
	}
	protected native static void iauPr00(double date1, double date2, @Ptr long dpsipr, @Ptr long depspr);
	/**
	 * Original signature : <code>void iauPrec76(double, double, double, double, double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:157</i>
	 */
	public static void iauPrec76(double ep01, double ep02, double ep11, double ep12, Pointer<Double > zeta, Pointer<Double > z, Pointer<Double > theta) {
		iauPrec76(ep01, ep02, ep11, ep12, Pointer.getPeer(zeta), Pointer.getPeer(z), Pointer.getPeer(theta));
	}
	protected native static void iauPrec76(double ep01, double ep02, double ep11, double ep12, @Ptr long zeta, @Ptr long z, @Ptr long theta);
	/**
	 * Original signature : <code>double iauS00(double, double, double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:159</i>
	 */
	native public static double iauS00(double date1, double date2, double x, double y);
	/**
	 * Original signature : <code>double iauS00a(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:161</i>
	 */
	native public static double iauS00a(double date1, double date2);
	/**
	 * Original signature : <code>double iauS00b(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:163</i>
	 */
	native public static double iauS00b(double date1, double date2);
